k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort

  selector:
    app: user-service

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
